# fastapi_socialnetworking

./: .gitignore  Makefile  README.md  stack.yml
Docker/: init.sql
api/: pyproject.toml
api/core/: config.py  database.py  exceptions.py
api/db/: users.py
